pearson ie7 bugs fixed (ish)

--- a/lms/static/sass/bourbon/css3/_box-sizing.scss
+++ b/lms/static/sass/bourbon/css3/_box-sizing.scss
@@ -3,4 +3,5 @@
   -webkit-box-sizing: $box;
      -moz-box-sizing: $box;
           box-sizing: $box;
+          box-sizing: $box; *behavior: url(/static/scripts/boxsizing.htc);
 }
